<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal"
    android:padding="5dip"
    android:background="@drawable/cours_detail_bg">

    <TextView
        android:id="@+id/className"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Class Name"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="16sp" />
    
    <View 
        android:layout_width="wrap_content" 
        android:layout_height="2dip"  
        android:background="#FF909090" 
        android:layout_marginLeft="10dip"  
        android:layout_marginRight="10dip" 
        android:layout_marginTop="10dip" />  
        
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="10dip">
        
        <TableLayout
            android:id="@+id/classInfoTable"
            android:layout_centerHorizontal="true"
    		android:layout_width="wrap_content"  
    		android:layout_height="wrap_content"> 
        
        <TableRow           
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

			<TextView
			    android:layout_width="wrap_content"
			    android:text="@string/type"
			    android:layout_marginRight="10dp"
			    android:textColor="#853a82" />

			<TextView
			    android:id="@+id/classType"
			    android:layout_width="wrap_content"
	      		android:text="TD"
	      		android:textColor="#000000" />
    	</TableRow>
    	
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			<TextView
			    android:layout_width="wrap_content"
	      		android:text="@string/time"
	      		android:layout_marginRight="10dp"
	      		android:textColor="#853a82" />
			<TextView
			    android:id="@+id/classTime"
			    android:layout_width="wrap_content"
	      		android:text="9:45--13:00"
	      		android:textColor="#000000" />
    	</TableRow>
    	
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			<TextView
			    android:layout_width="wrap_content"
	      		android:text="@string/group"
	      		android:layout_marginRight="10dp"
	      		android:textColor="#853a82" />
			<TextView
			    android:id="@+id/classGroup"
			    android:layout_width="wrap_content"
	      		android:text="Gp-EI2-TDg7"
	      		android:textColor="#000000" />
    	</TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			<TextView
			    android:layout_width="wrap_content"
	      		android:text="@string/room"
	      		android:layout_marginRight="10dp"
	      		android:textColor="#853a82" />
			<TextView
			    android:id="@+id/classRoom"
			    android:layout_width="wrap_content"
	      		android:text="\?\?"
	      		android:textColor="#000000" />
    	</TableRow>
    	
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			<TextView
			    android:layout_width="wrap_content"
	      		android:text="@string/teacher"
	      		android:layout_marginRight="10dp"
	      		android:textColor="#853a82" />
			<TextView
			    android:id="@+id/classTeacher"
			    android:layout_width="wrap_content"
	      		android:text="\?\?"
	      		android:textColor="#000000" />
    	</TableRow>
		</TableLayout> 
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        
        <Button
            android:id="@+id/dialog_button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit" />

    	<Button
            android:id="@+id/dialog_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/close" />
    </LinearLayout>
    
</LinearLayout>